# crossview

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  SECURITY.md  flake.nix  pyproject.toml
.claude-plugin/: plugin.json
.claude-plugin/skills/crossview/: SKILL.md
.github/workflows/: pages.yml
crossview/: __main__.py  cli.py  reporting.py
crossview/data/: cohort.py  database.py  downloader.py  loader.py  paths.py  sources.py
crossview/data/normalizers/: base.py  cwe.py  d3fend.py  (+2 more)
crossview/dev/: commands.py  inspector.py  sampler.py  schema_infer.py  url_check.py
crossview/domain/: __init__.py  entities.py
crossview/enrichment/: cache.py  orchestrator.py  paths.py
crossview/graph/: schema.py  types.py
crossview/harness/: base.py  orchestrator.py
crossview/intel/: __init__.py  commands.py  generate.py
crossview/kill_chain/: ukc.py
crossview/scanner/: bandit_ingest.py  investigate.py  prematch_code.py  prematch_deps.py  prematch_iac.py  prematch_secrets.py  preset_selector.py  reporter.py  sarif_ingest.py  survey.py  tooling.py  triage.py  verify.py
crossview/tui/: app.py
docs/: 01-introduction.md  02-installation.md  03-user-guide.md  04-cli-reference.md  05-api-guide.md  06-architecture.md  07-scanner-pipeline.md  08-data-model.md  09-rules-and-presets.md  10-enrichment.md  11-ai-skill-guide.md  12-intel-mindmeld.md  13-case-study.md  14-vision.md  15-ui-screens.md  README.md  cwe-compliance.md  index.html  style.css
docs/demo/: README.md
outputs/: linkedin-post.md  substack-draft.md
rules/: bandit.yaml  presets.yaml
scripts/: build_demo.py  capture_ui.py  cinematic.py  gen_screenshots.py  hud_video.py  make_og_card.py
site/: README.md
(+21 files in other folders)
