[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crossview"
version = "0.1.0"
description = "Cross-referenced MITRE CAPEC/CWE/ATT&CK/D3FEND silo with TUI and code scanner"
requires-python = ">=3.11"
dependencies = [
    # Core
    "typer>=0.12.0",
    "httpx>=0.28.0",
    "textual>=0.80.0",
    "xmltodict>=0.13.0",
    "rich>=13.0.0",

    # Code analysis (the SAST yoinks)
    "bandit>=1.7.0",
    "semgrep>=1.90.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=0.4.0",
    "ast-grep-py>=0.30.0",

    # SAST output normalization (OASIS SARIF)
    "sarif-om>=1.0.4",
    "sarif-tools>=3.0.0",

    # Secrets detection
    "detect-secrets>=1.5.0",

    # Cross-source graph navigation
    "networkx>=3.3",

    # In-process GraphQL surface (crossview graphql)
    "strawberry-graphql>=0.230.0",

    # SQL sink analysis
    "sqlglot>=25.0.0",

    # Report templates
    "jinja2>=3.1.0",

    # Web research enrichment
    "crawl4ai>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]
# PDF report output (HTML is always produced via Jinja2, no extra needed).
# WeasyPrint is the lightweight headless engine; a Playwright Chromium also works.
pdf = [
    "weasyprint>=62.0",
]
# HTTP GraphQL server (crossview serve) — the seam for web/desktop front-ends.
serve = [
    "uvicorn>=0.30.0",
]

[project.scripts]
crossview = "crossview.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["crossview"]

[tool.ruff]
line-length = 100
target-version = "py311"
